# GCP-Event-Logger

./: CMakeLists.txt  Dockerfile.publisher  Dockerfile.subscriber  README.md  cloudbuild.yaml
docker/: Dockerfile.publisher  Dockerfile.subscriber
publisher/: CMakeLists.txt  main.cpp  main.py  requirements.txt
subscriber/: CMakeLists.txt  main.cpp  main.py  requirements.txt
